fix: исправить согласно замечаниям ревью